--- a/MovieWebsite/src/main/resources/templates/login.html
+++ b/MovieWebsite/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
 	 <!-- ログインエラーのときはメッセージを表示 -->
 	 <div th:if="${failureMessage != null}" th:text="${failureMessage}"></div>
 	<h2>ログイン</h2>
-	<form action="/login" method="post">
+	<form action="@{/login}" method="POST">
 		<label for="username">Username:</label>
 		<input type="text" id="username" name="username" required>
 		<br>
