--- a/MovieWebsite/src/main/resources/templates/menu.html
+++ b/MovieWebsite/src/main/resources/templates/menu.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}">
-<title>メニュー</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Menu</title>
 </head>
+
 <body>
-    <div class="container">
-        <h1 class="mb-5">メニュー画面</h1>
-        <h3>ログイン成功</h3>
-        <form th:action="@{/logout}" method="post">
-        <input type="submit" value="ログアウト"/>
-    </div>
-    <script src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
-    <script src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
+	<div class="container">
+		<h1 class="mb-5">メニュー画面</h1>
+		<h3>ログイン成功</h3>
+		<form th:action="@{/logout}" method="POST">
+			<input type="submit" value="ログアウト" />
+	</div>
 </body>
+
 </html>
