--- a/MovieWebsite/src/main/resources/templates/commons/layout.html
+++ b/MovieWebsite/src/main/resources/templates/commons/layout.html
@@ -6,7 +6,6 @@
 <title>ベース：レイアウト</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" href="main.css">
-	<link rel="stylesheet" href="sanitize.css">
 	<link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
 
@@ -16,10 +15,9 @@
 	<!-- 共通ヘッダー -->
 <header>
 	<div class="title">
+		<img src="../img/header.png">
 		<h1>キャルシネマ</h1>
-		<div class="account">
 			<h5>[[${name}]]さん、こんにちは！</h5>
-		</div>
 	</div>
 </header>
 
@@ -35,6 +33,7 @@
 	
 	<!-- 共通フッター -->
 <footer>
+	<a href="#" id="page-top"><i class="blogicon-chevron-up"></i>トップへ戻る</a>
 	<ul class="footer-link">
 		<li><a href="">企業情報</a></li>
 		<li><a href="">個人情報の取扱いについて</a></li>
