--- a/MovieWebsite/src/main/resources/templates/introduction.html
+++ b/MovieWebsite/src/main/resources/templates/introduction.html
@@ -7,7 +7,6 @@
 	<title>キャルシネマ - 作品紹介</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" href="main.css">
-	<link rel="stylesheet" href="sanitize.css">
 	<link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
 </head>
@@ -21,8 +20,8 @@
 						<h3>上映作品</h3>
 							<article class="movie-view">
 								<img src="">
-								<h5>[[${movie_title}]]</h5>
-								<p>[[${summery}]]</p>
+								<h5>[[${movie.movie_title}]]</h5>
+								<p>[[${movie.summary}]]</p>
 								<br/><br/>
 							</article>
 					</article>
