--- a/MovieWebsite/src/main/resources/templates/confirm.html
+++ b/MovieWebsite/src/main/resources/templates/confirm.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+<link rel="stylesheet" href="main.css">
 <meta charset="UTF-8">
 <title>確認画面</title>
 </head>
