--- a/MovieWebsite/src/main/resources/templates/splash.html
+++ b/MovieWebsite/src/main/resources/templates/splash.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>スプラッシュスクリーン</title>
+<meta http-equiv="Refresh" content="3; url=welcome.html">
+<link rel="stylesheet" href="splash.scss">
+<link rel="stylesheet" href="splash.js">
 </head>
 <body>
 <div id="initial-loader" class="padded"><span id="loader-text"></span></div>
@@ -14,8 +17,8 @@
     <a href="http://nclud.com" target="_blank"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/141552/logo.svg" id="nclud-logo"></a>
     </nav>
     <div class="header-text grid_row padded-horizontal">
-      <h2 class="grid2">Revolutionary is our baseline. Different is our first step. And radical means we’re just getting started.</h2>
-      <h1 class="grid3">We are nclud.</h1>
+      <h2 class="grid2">In an age when films are available online and people are moving away from cinemas, the aim is to make cinemas accessible to a large number of people.</h2>
+      <h1 class="grid3">CAL cinema.</h1>
     </div>
 
     <div id="canvas">
