--- a/MovieWebsite/src/main/resources/templates/introduction.html
+++ b/MovieWebsite/src/main/resources/templates/introduction.html
@@ -21,7 +21,7 @@
 							<article class="movie-view">
 								<img th:src="[[${movie.img}]]">
 								<h5>[[${movie.movie_title}]]</h5>
-								<button class="movie-introduction"><a th:href="">予約する</a></button>
+								<button class="movie-introduction"><a th:href="reservation">予約する</a></button>
 								<h5>あらすじ</h5>
 								<p>[[${movie.summary}]]</p>
 								<br/><br/>
