--- a/MovieWebsite/src/main/resources/static/main.css
+++ b/MovieWebsite/src/main/resources/static/main.css
@@ -56,6 +56,7 @@ article{
 	line-height: 1.5;
 	word-break: break-all;
 }
+
 article.heading{
 	margin:0;
 	padding:0;
@@ -76,7 +77,6 @@ h1{
 h2,h3,h4,h5,h6 {
 	font-family:'マキナス','游ゴシック','メイリオ','ヒラギノ角ゴシック','Arial',sans-serif;
 	text-decoration:underline;
-	
 }
 
 nav{
@@ -93,7 +93,7 @@ nav{
 	list-style-type: none;
 	display:list-item;
 	color:rgb(211, 211, 211);
-	background-color: #000000!important;
+	background-color: #000000;
 }
 
 
@@ -138,9 +138,9 @@ header{
 	vertical-align: text-bottom;
 }
 
-.account{
+/*.account{
 	
-}
+}*/
 
 header.fixed{
 	position: fixed;/*fixedを設定して固定*/
@@ -204,9 +204,9 @@ pre {
 	font-size: inherit;
 }
 
-blockquote {
+/*blockquote {
 	
-}
+}*/
 
 table {
 	max-width: 100%;
