--- a/MovieWebsite/src/main/resources/templates/login.html
+++ b/MovieWebsite/src/main/resources/templates/login.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Login</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<link rel="stylesheet" href="main.css">
+	<title>キャルシネマ - ログイン画面</title>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
 	<h2>ログイン</h2>
 	<form th:action="@{/authenticate}" method="POST">
 		<label for="username">Username:</label>
-		<input type="text" id="username" name="username" required>
+		<input type="text"  id="username" name="username" required>
 		<br>
 		<label for="password">Password:</label>
 		<input type="password" id="password" name="password" required>
