--- a/MovieWebsite/src/main/resources/templates/menu.html
+++ b/MovieWebsite/src/main/resources/templates/menu.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Menu</title>
+	<title>キャルシネマ</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv="refresh" th:content="'3; url=show/'+${username}">
+<link rel="stylesheet" href="splash.scss">
+<link rel="stylesheet" href="splash.js">
 </head>
-
 <body>
-	<div class="container">
-		<h1 class="mb-5">メニュー画面</h1>
-		<h3>ログイン成功</h3>
-		<form th:action="@{/logout}" method="POST">
-			<input type="submit" value="ログアウト" />
+	<div id="initial-loader" class="padded"><span id="loader-text"></span></div>
+	<div id="main-body">
+	<section id="page-structure" class="ajax">
+		<header class="eliza height-95 black back-block-green-bottom-right">
+    		<nav class="padded">
+    			<a href="http://nclud.com" target="_blank"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/141552/logo.svg" id="nclud-logo"></a>
+    		</nav>
+			<div class="header-text grid_row padded-horizontal">
+      			<form th:action="@{/logout}" method="POST">
+					<input type="submit" value="ログアウト" />
+      			<h2 class="grid2">In an age when films are available online and people are moving away from cinemas,
+					  the aim is to make cinemas accessible to a large number of people.</h2>
+      			<h1 class="grid3">CAL cinema.</h1>
+    		</div>
+    		<div id="canvas">
+				<img id="image" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/141552/header-home-fallback.jpg" data-fallback="https://s3-us-west-2.amazonaws.com/s.cdpn.io/141552/header-home-fallback.jpg">
+    		</div>
+		</header>
+	</section>
 	</div>
 </body>
-
 </html>
