--- a/MovieWebsite/src/main/resources/templates/index.html
+++ b/MovieWebsite/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 		<div layout:fragment="content">	
 
 		<!-- ヘッダー画像 -->
-		<img src="../img/header.png" width="1000" hight="500">
+		<img src="../img/header.png" class="header-img">
 		
 		<!-- お知らせ -->
 					<article class="information">
