--- a/MovieWebsite/src/main/resources/templates/confirmComp.html
+++ b/MovieWebsite/src/main/resources/templates/confirmComp.html
@@ -6,7 +6,7 @@
 <title>予約完了画面</title>
 </head>
 <body>
-	<div align="center">
+	<div>
 		<h2>予約確定いたしました</h2>
 		<p>[[${managementTime}]]</p>
 		<p>予約番号:[[${reservationNumber}]]</p>
