--- a/MovieWebsite/src/main/resources/templates/confirm.html
+++ b/MovieWebsite/src/main/resources/templates/confirm.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<form th:action="@{/reservation/confirmComp}"method="post">
-		<div align="center">
+		<div>
 		<h1>確認画面</h1>
 <!--		"フォームの型名.フィールド名"と書くことで、contorollerからmodel.addAttributeしなくても表示できます。-->
 			<p>作品名:[[${reservationForm.movieTitle}]]</p>
