--- a/MovieWebsite/src/main/resources/static/main.css
+++ b/MovieWebsite/src/main/resources/static/main.css
@@ -17,10 +17,10 @@
 * {
 	margin:0;
 	padding:0;
-	background-image: '../img/background.jpg';
 }
 
 html {
+	background-image: url('../img/background.jpg');
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: center;
@@ -30,18 +30,19 @@ html {
 
 body {
 	padding: 0;
-	margin-top: 0px;
-	margin-bottom: 0px;
+	margin-top: 10%;
+	margin-bottom: 8%;
 	margin-right: 15%;
 	margin-left: 15%;
-	background-color: #FFFFFF;	
+	background-color: #FFFFFF;
 }
 
-.container{
+body.container{
 	height: 100%;
 	/*width: 80%;中央の幅の指定*/
-	margin: 0 auto;
+	margin: 0;
 	background: #FFFFFF;
+	filter: opacity(80%);
 	color:#000000;
 	font-family:'NotoSans','游ゴシック','メイリオ','ヒラギノ角ゴシック','Arial',sans-serif;
 	font-size:normal;
@@ -63,7 +64,7 @@ article{
 }
 
 article.information{
-	padding-top: 0px;
+	padding-top: 0;
 	padding-right:0;
 	padding:0;
 	padding-bottom:30px;
@@ -80,7 +81,7 @@ article.heading{
 h1{
 	color: #ec541c;
 	font-family:'キー','游ゴシック','メイリオ','ヒラギノ角ゴシック','Arial',sans-serif;
-	font-size: 40px;
+	font-size: 20px;
 	font-weight:normal;
 	letter-spacing:normal;
 	line-height: 1.5;
@@ -93,34 +94,14 @@ h2,h3,h4,h5,h6 {
 }
 
 nav{
-	display:block;
-}
-
-.grobal-nav ul{
-	display: flex;
-	padding:0.5em;
-	border:solid;
-}
-
-.menu li{
-	list-style-type: none;
-	display:list-item;
-	color:rgb(211, 211, 211);
-	background-color: #000000;
+	width: 100%;
+	height: 70px;
+	background-color: dimgray;
+	padding-top: 5px;
+	box-sizing: border-box;
 }
 
 
-.global-nav ul li a{
-	display:block;
-	text-decoration: none;
-	transition: all 0.3s;
-}
-
-@media (min-width: 640px) {
-	.menu li {
-		display: inline-block;	/* 横に並べる */
-	}
-}
 
 p {
 	text-indent: 1em;
@@ -130,7 +111,7 @@ p {
 }
 
 header{
-	padding:10px;
+	padding:0px;
 	height:100px;
 	width:100%;
 	display:flex;
@@ -146,21 +127,24 @@ header{
 
 .title{
 	margin:5px;
-	display: flex;
-	line-height: 70px;
-	text-align: justify !important;
-	vertical-align: text-bottom;
+	color: #ec541c;
+	font-family:'キー','游ゴシック','メイリオ','ヒラギノ角ゴシック','Arial',sans-serif;
+	font-size: 20px;
+	font-weight:normal;
+	text-align: left;
+	letter-spacing:normal;
+	line-height: 1.5;
+	word-break: break-all;
 }
 
-/*.account{
-	
-}*/
-
-header.fixed{
-	position: fixed;/*fixedを設定して固定*/
-	z-index: 999;/*最前面へ*/
-	top:0;/*位置指定*/
-	left:0;/*位置指定*/
+.account{
+	padding:0;
+	margin:0;
+	color: #000000;
+	font-size: 20px;
+	font-family:'マキナス','游ゴシック','メイリオ','ヒラギノ角ゴシック','Arial',sans-serif;
+	text-decoration: underline;
+	text-align: right;
 }
 
 footer{
@@ -188,8 +172,12 @@ footer{
     border-bottom: none;
 }
 
-ol,ul {
+ol {
 	list-style: none;
+}
+
+ul{
+	display: flex;
 }
 
 /***トップへ戻るボタン***/
@@ -220,10 +208,6 @@ pre {
 	font-size: inherit;
 }
 
-/*blockquote {
-	
-}*/
-
 table {
 	max-width: 100%;
 }
@@ -247,6 +231,7 @@ code {
 }
 
 img {
+	text-indent: 1em;
 	max-width: 100%;
 }
 
@@ -259,13 +244,16 @@ img {
 }
 
 a{
-	color: #FFFFFF;
+	color: #666666;
 	text-decoration:none;
-	background-color:transparent
 }
 
 a:hover{
-	color:#666666;
+	color:#ec541c;
 	text-decoration: none;
 }
 
+a:visited{
+	color:#666666;
+	text-decoration: none;
+}
