--- a/MovieWebsite/src/main/resources/templates/commons/layout.html
+++ b/MovieWebsite/src/main/resources/templates/commons/layout.html
@@ -3,7 +3,7 @@
 		xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="../main.css">
 <title>ベース：レイアウト</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
@@ -11,12 +11,10 @@
 <body>
 	<div class="container">
 	<!-- 共通ヘッダー -->
-<header>
-	<div class="title">
-		<h1>キャルシネマ</h1>
-			<h5>[[${username}]]さん、こんにちは！</h5>
-	</div>
-</header>
+	<header>
+		<div class="title">キャルシネマ</div>
+			<div class="acount">[[${username}]]さん、こんにちは！</div>
+	</header>
 
 	<!-- メニューバー -->
 	<div id="one" th:insert="~{menubar :: home}"></div>
@@ -43,16 +41,13 @@
 	<!-- コピーライト-->
 	<small>&copy; Kohei makes a name of our team.</small>
 	
-	<!-- SNS スクリプトコード -->
-	<div >
-		
-	</div>
 </footer>
 </div>
 
-	<!-- ナビゲーションファイルの埋め込み -->
+	<!-- ナビゲーションファイルの埋め込み>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<!--自作のJS-->
-	<script src="gnav.js"></script>
+	<!--自作のJS>
+	<script src="gnav.js"></script>-->
+	
 </body>
 </html>
