--- a/MovieWebsite/src/main/resources/templates/login.html
+++ b/MovieWebsite/src/main/resources/templates/login.html
@@ -3,27 +3,54 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="../main.css">
 	<title>キャルシネマ - ログイン画面</title>
 </head>
 
 <body>
-	 <!-- ログインエラーのときはメッセージを表示 -->
-	 <div th:if="${failureMessage != null}" th:text="${failureMessage}"></div>
-	<h2>ログイン</h2>
-	<form th:action="@{/authenticate}" method="POST">
-		<label for="username">Username:</label>
-		<input type="text"  id="username" name="username" required>
+	<header>
+		<div class="title">
+			<h1>キャルシネマ</h1>
+		</div>
+	</header>
+	<div class="container">
+		
+	<!-- ログインエラーのときはメッセージを表示 -->
+	<div th:if="${failureMessage != null}" th:text="${failureMessage}"></div>
+	
+		<!--<div class="login">-->
+		<h2>ログイン</h2>
+		<form th:action="@{/authenticate}" method="POST">
+			<label for="username">Username:</label>
+			<input type="text"  id="username" name="username" required><br>
+			<label for="password">Password:</label>
+			<input type="password" id="password" name="password" required><br>
+			<button type="submit">ログイン</button>
+		</form>
 		<br>
-		<label for="password">Password:</label>
-		<input type="password" id="password" name="password" required>
-		<br>
-		<button type="submit">ログイン</button>
-	</form>
-	<br>
-	<a th:href="@{/register}">新規登録</a>
+		<a th:href="@{/register}">新規登録</a>
+	
+	<!-- 共通フッター -->
+<footer>
+	<a href="#" id="page-top"><i class="blogicon-chevron-up"></i>トップへ戻る</a>
+	<ul class="footer-link">
+		<li><a href="">企業情報</a></li>
+		<li><a href="">個人情報の取扱いについて</a></li>
+		<li><a href="">特定商取引法に基づく表記</a></li>
+		<li><a href="">ご利用に際して</a></li>
+		<li><a href="">キャルシネマ利用規約</a></li>
+		<li><a href="">Cookieの設定</a></li>
+	</ul>
+	
+	<!-- コピーライト-->
+	<small>&copy; Kohei makes a name of our team.</small>
+	
+	<!-- SNS スクリプトコード -->
+	<div ></div>
+	
+</footer>
+</div>
+	
 </body>
-
 </html>
