--- a/MovieWebsite/src/main/resources/templates/menubar.html
+++ b/MovieWebsite/src/main/resources/templates/menubar.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="../main.css">
 <title>menubar</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
@@ -10,11 +10,11 @@
 <body>
 	<div class="container">
 	<!-- フラグメントを定義-->
-		<nav class="grobal-nav">
-		<ul class="menu">
-			<li><span th:fragment="home"><a href="">ホーム</a></span></li>
-			<li><span th:fragment="introduction"><a href="">作品紹介</a></span></li>
-			<li><span th:fragment="reservation"><a href="">予約する</a></span></li>
+		<nav>
+		<ul>
+			<li><span th:fragment="home"><a th:href="|/show/${username}|">ホーム</a></span></li>
+			<li><span th:fragment="introduction"><a th:href="|/view/${username}|">作品紹介</a></span></li>
+			<li><span th:fragment="reservation"><a th:href="|/entry/${username}|">予約する</a></span></li>
 			<li><span th:fragment="changeAndDelete"><a href="">予約変更と削除</a></span></li>
 			<li><span th:fragment="guide"><a href="">劇場案内</a></span></li>
 		</ul>
